# Mentis

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  setup.py
basic/: batch_submit.ipynb  keyerror.ipynb
mentis/: logging.py
mentis/config/: app_config.py
mentis/runtime/: conv_manager.py  conversation.py  models.py
mentis/runtime/function_calling/: function_call_support.py  tools.py
mentis/runtime/langchain/: schema.py
mentis/textual_ui/: __init__.py  app.py  dark.tcss
mentis/textual_ui/screens/: chat_screen.py  message_info_modal.py  search_screen.py
mentis/textual_ui/widgets/: chat.py  chat_list.py  chatbox.py  footer.py  header.py  model_select.py  search.py
notebook/: cache_risks_0_25.json  cache_risks_25_53.json  images.ipynb  ssdlc-scan-agents-keentune-brain.ipynb  ssdlc-scan-agents-keentune-target.ipynb  ssdlc-scan-agents-keentuned.ipynb  ssdlc-scan-agents-sysom.ipynb  ssdlc-scan-agents.ipynb  vector_embeddings.ipynb
notebook/data/: cwe-78.md  result.json
pkg/: mentis.go
pkg/chat/: bot.go  chat.go  message.go  parameters.md
pkg/models/: list.go
prompts/: audio.ipynb  langchain-dev.ipynb  ttp.md  x-sec.ipynb  x-sec.md
prompts/sbom-datas/: openssl_test.c
vectordb/: sqlite-vec.ipynb
